# ahdam42.github.io

./: .gitignore  .pre-commit-config.yaml  LatexFSM.py  README.md  answer.py  data_obj.py  document_links.json  gen_latex2pdf.py  index.html  pipline_latex.py  pyproject.toml  rag.py  requirements.txt  research_state.json  vectors.py
src/: DocumentProcessor.py  DocumentsDownloader.py  document_processor.py  documents_downloader.py
src/DAO/: DataObj.py  DocumentLinks.py  ProcessingState.py  ResearchState.py  document_links.py  processing_state.py  research_state.py
src/prompt/: LLMService.py  PromptService.py  llm_service.py  prompt_service.py
src/utils/: PDFUtils.py  pdf_utils.py  utils.py
tests/: test_utils.py
