[project]
name = "AssistantBot"
version = "0.0.1"
description = "AssistantBot is an AI-powered application designed to automate the discovery, analysis, and organization of scientific articles. Leveraging Large Language Models (LLMs), it streamlines literature reviews by intelligently retrieving, summarizing, and extracting insights from research papers."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "PyMuPDF",
    "httpx"
]


[project.optional-dependencies]
dev = [
    "ruff >= 0.11.5 ",
    "pytest >= 8.3.5",
    "pre-commit >= 4.2.0"
]

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "D203", "D212", "D417",  # pydocstyle
    "S101",                   # assert
    "PLR0913",                # too many args
    "PLW0603",                # global
    "TRY003",                 # verbose raise
    "TRY300"                  # statement to else block
]
line-length = 120
target-version = "py310"
exclude = [
    "tests/",  # Игнорируем всю папку tests
    "**/__pycache__/",  # Дополнительные исключения
]


